<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="MOD_InputBelt_I_stSensor" Id="{baad4f88-43e2-46dc-bb07-982587da7176}">
    <Declaration><![CDATA[TYPE MOD_InputBelt_I_stSensor :
STRUCT
	Blocked : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>